@@ -223,6 +223,9 @@ Porting:
 	PACKET_IGNORE_OUTGOING socket options when available.
 	Test: INTERFACE_IGNOREOUTGOING
 
+	Renewed port to OpenBSD:
+	Guard OPENSSL_INIT_SETTINGS; and minor changes.
+
 Testing:
 	Removed obselete parts from test.sh
 
